<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_maps" translatable="false">Go4Lunch</string>

    <string name="menu_title_1" translatable="false">Map View</string>
    <string name="menu_title_2" translatable="false">List View</string>
    <string name="menu_title_3">Workmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="connexion">Connexion</string>
    <string name="delete_user">Delete account</string>
    <string name="pop_up_delete_user">Do you really want to delete your account?</string>
    <string name="pop_up_positive_button_text">Yes</string>
    <string name="pop_up_negative_button_text">No</string>
    <string name="detail_app_function">Lunch with your workmates</string>
    <string name="start_application" translatable="false">Start Go4Lunch</string>

    <string name="chosen_restaurant">Chosen restaurant</string>
    <string name="you_will_eat_at">You will eat at</string>
    <string name="at">at</string>
    <string name="with">with</string>

    <string name="call">Call</string>
    <string name="like" translatable="false">Like</string>
    <string name="website">Website</string>

    <string name="im_hungry">I\'m hungry</string>
    <string name="available_workmates">Available workmates</string>

    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="log_out">LOG OUT</string>

    <string name="connection_succeed">Connection succeed</string>
    <string name="connection_failed">Connection failed</string>
    <string name="no_internet">No internet</string>
    <string name="connection_canceled">Connection canceled</string>
    <string name="unknown_error">Unknown error</string>

    <string name="has_not_decided_yet">hasn\'t decided yet</string>
    <string name="is_eating_at">is eating at </string>
    <string name="is_joining">is joining!</string>
    <string name="restaurant_liked">You like this restaurant!</string>
    <string name="restaurant_not_liked">You don\'t like the restaurant</string>

    <string name="ok" translatable="false">OK</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">416583909320637</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb416583909320637</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">2fADjirsBAjEjzHZkIV9OUgXl</string>
    <string name="twitter_consumer_secret" translatable="false">8x7XAfraAvfJU6vxK7gfZl0kJuHhcikMLKgaL1u5lg9fqJg9Zy</string>

    <string-array name="colleague_name">
        <item>Scarlett</item>
        <item>Hugh</item>
        <item>Nana</item>
        <item>Godfrey</item>
        <item>Henry</item>
        <item>Angelina</item>
        <item>Robert</item>
        <item>Emma</item>
    </string-array>

</resources>